# cosmos-client-ts

./: .eslintrc.jest.json  .eslintrc.json  .eslintrc.prettier.json  .eslintrc.typescript.json  .gitignore  .gitmodules  .npmignore  .prettierrc  README.md  bundle.js  gen-openapi.sh  gen-proto.sh  index.html  index.js  jest.config.js  karma.conf.js  package-lock.json  package.json  protocgen.sh  submodule-config.sh  swagger.yaml  tsconfig.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: deploy-prod.yml  deploy.yml  nodejs.yml
src/: api.ts  base.ts  cdn.ts  configuration.ts  cosmos-client.spec.ts  cosmos-client.ts  cosmos-sdk.spec.ts  cosmos-sdk.ts  index.ts  module.ts  proto.d.ts  sdk.ts
src/codec/: amino.ts  any.ts  codec.spec.ts  index.ts  module.ts
src/common/: amino.ts  cosmos-sdk-host.ts  hd-wallet.spec.ts  hd-wallet.ts  index.ts
src/config/: index.ts  module.ts
src/cosmos/: index.ts  module.ts
src/cosmos-sdk/: account.ts  address.ts  msg.ts  rest.ts  result.ts  tx.ts  tx_msg.ts
src/ibc/: index.ts  module.ts
src/models/: address.ts  cosmos-sdk-host.ts  private-key.ts  public-key.ts
src/openapi/: api.ts  base.ts  common.ts  configuration.ts  index.ts
src/rest/: config.ts  index.ts  module.ts
src/tendermint/: amino.ts  api.ts  index.ts  module.ts  tendermint.ts
src/tendermint/sr25519/: .gitignore  Cargo.toml  README.md
src/tendermint/sr25519/src/: index.js  lib.rs
src/tests/: delete-test.ts  get-test.ts  post-test.ts  put-test.ts
src/types/: coin.ts  compact-bit-array.spec.ts  (+13 more)
(+625 files in other folders)
