[package]
name = "crypto"
version = "0.1.0"
authors = ["Yu <33382781+YuKimura45z@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.62"
wee_alloc = "0.4.3"
# Feature attributes are may only allowed on the nightly release.
# schnorrkel = { version = "0.9.1", features = ["nightly", "preaudit_deprecated", "u64_backend"] }
schnorrkel = "0.9.1"

[dev-dependencies]
hex-literal = "0.2.0"
# Feature attributes are may only allowed on the nightly release.
# rand = { version = "0.7.3", features = ["wasm-bindgen"] }
rand = "0.7.3"

[profile.release]
lto = true
